# TyutyunShopBackend

./: .env.examle  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  lint.yml
client_tester/: .env.example  .gitignore  Cargo.toml
client_tester/src/: main.rs
src/: database.rs  main.rs  server.rs
src/data/: category.rs  claims.rs  mod.rs  product.rs  product_image.rs  user.rs
src/data/orders/: mod.rs  order.rs  order_item.rs  shipping.rs
src/data/product/: mod.rs
src/data/products_components/: category.rs  mod.rs  product.rs  product_image.rs  size.rs
src/data/user/: claims.rs  login.rs
src/data/user_components/: authorization.rs  claims.rs  login.rs  mod.rs  user.rs
src/error/: api_error.rs
src/mail/: sender.rs
src/query/: mod.rs
src/query/category/: category_query.rs  mod.rs
src/query/mail/: mail_query.rs  mod.rs
src/query/orders/: mod.rs  orders_query.rs  shipping_query.rs
src/query/product/: category_query.rs  mod.rs  product_image_query.rs  product_query.rs  size.rs
src/query/products_components/: category_query.rs  mod.rs  product_image_query.rs  product_query.rs  size.rs  size_query.rs
src/query/user/: user_query.rs
src/tests/: constant_images.rs  mod.rs  test.rs
src/tests/database/: mod.rs  request_test_db.rs  user_test_db.rs
src/tests/database/products/: cap_test_db.rs  hoodie_test_db.rs  mod.rs  product_test_db.rs  t_shirt_test_db.rs
src/tests/database/products/property/: category_test_db.rs  constant_images.rs  image_test_db.rs  mod.rs  size_test_db.rs
src/utils/: env_configuration.rs  mod.rs
src/utils/constants/: images_constants.rs  mod.rs  routes.rs
