[package]
name = "tyutyunserver"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
dotenv = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "2.0.0"
sqlx-macros = "0.8.2"
rocket_cors = "0.6.0"
eyre = "0.6"
uuid = { version = "1.1", features = ["v4"] }
reqwest = { version = "0.12.9", features = ["multipart", "cookies", "json", "stream"] }
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
once_cell = "1.19.0"
[package.metadata.sqlx]
database = "postgres"
sqlx = "0.8.2"